vistas del menu creadas

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -2,4 +2,5 @@
 @forward "sass/base";
 @forward "sass/layout";
 @forward "sass/components";
-@forward "sass/pages/"
+@forward "sass/pages/";
+@forward "sass/welcome/";
