--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+button {
+  cursor: pointer;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -28,6 +32,7 @@
   --Roboto: "Roboto", sans-serif;
   --font-stack: Helvetica, sans-serif;
   /* Colors */
+  --primarycolor: rgb(14, 13, 13);
   /* Colors Iconos */
   --fillfacebook: #0e0e9c;
   --fillwhatsapp: #008011;
@@ -39,6 +44,12 @@
   /* Background */
   /* Border */
   /* Font */
+  --lineleft: 100px;
+  --title: 70px;
+  --textnormal: 25px;
+  /* 
+      --colorrowA: <?php echo $botontop; ?>;
+      --colorrowB: $botonleft; */
 }
 
 /* Box sizing rules */
@@ -202,7 +213,7 @@ footer .cajauno .cajainformation .enlaceinformation:hover {
   left: 550px;
 }
 
-.CajaPrincipal {
+.Cajamenu {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -213,23 +224,23 @@ footer .cajauno .cajainformation .enlaceinformation:hover {
   width: 100%;
   z-index: -1;
 }
-.CajaPrincipal .logo {
+.Cajamenu_logo {
   margin-right: 25px;
   border-radius: 20px;
 }
-.CajaPrincipal .nombre {
+.Cajamenu_nombre {
   font-family: var(--Sansita);
   font-size: 25px;
   color: #0a0a0a;
   display: block;
   padding-right: 640px;
 }
-.CajaPrincipal .nav-item {
+.Cajamenu_nav-item {
   display: inline-block;
   margin-left: 50px;
   font-size: 15px;
 }
-.CajaPrincipal .nav-link {
+.Cajamenu_nav-link {
   font-size: 18px;
   font-family: var(--Sansita);
   width: 110px;
@@ -237,12 +248,11 @@ footer .cajauno .cajainformation .enlaceinformation:hover {
   color: rgb(0, 0, 0);
   transition: 0.4s;
 }
-.CajaPrincipal .nav-link:hover {
-  transform: translateY(-10px);
+.Cajamenu_nav-link:hover {
   border-bottom: 1px solid #000000;
   color: rgb(34, 9, 255);
 }
-.CajaPrincipal .nav-link:focus {
+.Cajamenu_nav-link:focus {
   color: rgb(255, 123, 0);
 }
 
@@ -258,6 +268,128 @@ footer .cajauno .cajainformation .enlaceinformation:hover {
   transform: translateY(-10px);
 }
 
-.face {
-  fill: var(--fillfacebook);
+.facebook {
+  fill: rgb(0, 99, 247);
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 0.4s;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px, rgb(255, 255, 255) -3px -3px 6px 1px;
+}
+.facebook:hover {
+  fill: var(--fillhovericons);
+  transform: translateY(-10px);
+}
+
+.whatssap {
+  fill: green;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 0.4s;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px, rgb(255, 255, 255) -3px -3px 6px 1px;
+}
+.whatssap:hover {
+  fill: var(--fillhovericons);
+  transform: translateY(-10px);
+}
+
+.email {
+  fill: rgb(197, 23, 0);
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 0.4s;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px, rgb(255, 255, 255) -3px -3px 6px 1px;
+}
+.email:hover {
+  fill: var(--fillhovericons);
+  transform: translateY(-10px);
+}
+
+.instagram {
+  fill: red;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 0.4s;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px, rgb(255, 255, 255) -3px -3px 6px 1px;
+}
+.instagram:hover {
+  fill: var(--fillhovericons);
+  transform: translateY(-10px);
+}
+
+.mensengger {
+  fill: rgb(0, 102, 255);
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 0.4s;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px, rgb(255, 255, 255) -3px -3px 6px 1px;
+}
+.mensengger:hover {
+  fill: var(--fillhovericons);
+  transform: translateY(-10px);
+}
+
+.boton {
+  width: 120px;
+  height: 30px;
+  position: absolute;
+  overflow: hidden;
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 15px;
+  top: 400px;
+  left: 100px;
+}
+
+.boton::before {
+  content: "";
+  position: absolute;
+  background: rgb(73, 0, 0);
+  left: -10px;
+  width: 10px;
+  top: 0;
+  bottom: 0;
+}
+
+.boton:hover::before {
+  left: calc(100% + 10px);
+  transition: left 500ms;
+}
+
+.welcomeheader {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  /* .welcomeheader_fondo {
+      width: 100%;
+      height: 100vh;
+  } */
+}
+.welcomeheader_title {
+  font-family: var(--Sansita);
+  left: var(--lineleft);
+  font-size: var(--title);
+  position: absolute;
+  top: 110px;
+  color: var(--primarycolor);
+  letter-spacing: 3px;
+}
+.welcomeheader_logo {
+  position: absolute;
+  width: 300px;
+  height: 320px;
+  -webkit-clip-path: polygon(50% 0%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 50% 100%, 20% 90%, 0% 70%, 0% 35%, 20% 10%);
+          clip-path: polygon(50% 0%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 50% 100%, 20% 90%, 0% 70%, 0% 35%, 20% 10%);
+  left: 1000px;
+  top: 150px;
+}
+.welcomeheader_descripcion {
+  color: var(--primarycolor);
+  position: absolute;
+  left: var(--lineleft);
+  top: 220px;
+  font-size: var(--textnormal);
+}
+.welcomeheader_descripcion::first-letter {
+  font-weight: bold;
+  font-size: 40px;
 }
