--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -6,3 +6,6 @@
 @forward "sass/welcome/";
 @forward "sass/reservar/";
 @forward "sass/login/";
+@forward "sass/menu/";
+@forward "sass/backoffice/";
+@forward "sass/conocenos/";
