--- a/resources/css/sass/abstract/_variables.scss
+++ b/resources/css/sass/abstract/_variables.scss
@@ -2,9 +2,10 @@
     /* Font */
     --Sansita: 'Sansita', sans-serif;
     --Roboto: 'Roboto', sans-serif;
-    --font-stack: Helvetica, sans-serif;
+    --font-stack: Helvetica,6 sans-serif;
     /* Colors */
-    --primarycolor: rgb(0, 0, 0);
+    --primarycolor: #3573bb;
+    --secundarycolor:rgb(168, 39, 0);
 
     /* Colors Iconos */
     --fillfacebook: #0e0e9c;
@@ -13,8 +14,8 @@
     --fillemail: #f0f0f0;
     --fillallicons: rgb(54, 0, 0);
     --fillhovericons: rgb(209, 9, 9);
-    /* Alert messages */
 
+    /* Alert messages */
     /* Background */
 
     /* Border */
