--- a/resources/css/sass/components/_card.scss
+++ b/resources/css/sass/components/_card.scss
@@ -1,26 +1,61 @@
-.cajacard{
-    width: 100%;
-    max-width: 1200%;
-    height: 430px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: auto;
-    
-    }
-    .cajacarddos{
+    .cajacard {
+        padding: 10px;
+        background-color: rgba(255, 255, 255, 0.925);
         width: 330px;
-        height: 430px;
-        border-radius: 8px;
-        box-shadow: 0 2px rgba(0, 0, 0, 0.2);
+        height: 420px;
+        border-radius: 10px;
+        box-shadow: 0 2px rgba(241, 241, 241, 0.767);
         overflow: hidden;
         margin: 20px;
         text-align: center;
         transition: all 0.25s;
+        
+        &_imagen {
+            width: 100%;
+            height: 180px;
+            border-radius: 10px;
+            padding-bottom: 15px;
+        }
+
+        &_titulo {
+            font-size: 20px;
+            letter-spacing: 2px;
+            padding-bottom: 15px;
+            font-family: var(--Sansita);
+        }
+
+        &_descripcion {
+            font-size: 15px;
+            font-family: var(--Roboto);
+            padding-bottom: 15px;
+        }
+
+        &_cajabotondos {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &_cajaboton {
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: none;
+            border-radius: 5px;
+            width: 130px;
+            height: 40px;
+            background-color: var(--primarycolor);
+            cursor: pointer;
+text-decoration: none;
+            &:hover{
+                transform: translateY(-4px);
+            }
+        }
+
     }
-    .cajacarddos:hover{
-        transform: translateY(-15px);
-        box-shadow: 0 12px 16px rgb(0, 0, 0, 0.2);
+
+    .cajacard:hover {
+        transform: translateY(-20px);
+        box-shadow: 0 12px 16px rgba(240, 234, 234, 0.548);
     }
-    
-    
