--- a/resources/css/sass/components/_footer.scss
+++ b/resources/css/sass/components/_footer.scss
@@ -1,25 +1,108 @@
-.welcomefooter{
+.footer {
     position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
-    height: 50vh;
-}
-.custom-shape-divider-bottom-1667324535 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-    transform: rotate(180deg);
-}
+    height: 60vh;
 
-.custom-shape-divider-bottom-1667324535 svg {
-    position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 158px;
-}
+    &_ubicacion {
 
-.custom-shape-divider-bottom-1667324535 .shape-fill {
-    fill: #2777d3;
+        &_mapa {
+            width: 300px;
+            height: 250px;
+        }
+
+    }
+
+    &_informacion {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        width: 250px;
+        height: 200px;
+        background-color: rgb(255, 255, 255);
+
+        &_logonombre {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: row;
+            width: 130px;
+            height: 40px;
+
+            &_foto {
+                width: 30px;
+                height: 30px;
+                border-radius: 35px;
+            }
+
+            &_titulo {
+                font-size: 25px;
+                font-family: var(--Sansita);
+            }
+        }
+
+        &_texto {
+            padding-top: 10px;
+            font-family: var(--Roboto);
+
+            &_parrafo {
+                text-align: justify;
+            }
+        }
+    }
+
+    &_suscribirse {
+        position: relative;
+        width: 320px;
+        height: 200px;
+        background-color: rgb(255, 255, 255);
+
+        &_iconos {
+            padding-top: 90px;
+            padding-bottom: 15px;
+            display: flex;
+            justify-content: space-around;
+            flex-direction: row;
+        }
+
+    }
+
+    &_cuadroConocenos {
+        display: flex;
+        position: absolute;
+        left: 0px;
+        top: 60px;
+        width: 200px;
+        height: 40px;
+        border: 1px solid rgb(65, 0, 51);
+        background-color: #ffffff70;
+        padding-left: 15px;
+        border-radius: .50rem 0 0 .50rem;
+        color: rgb(0, 0, 0);
+        font-family: var(--Roboto);
+        align-items: center;
+        font-size: 18px;
+
+    }
+
+    &_libro {
+        display: flex;
+        position: absolute;
+        left: 199px;
+        top: 60px;
+        width: 50px;
+        height: 40px;
+        border: 1px solid rgb(65, 0, 51);
+        background-color: #176bcac9;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0 .50rem .50rem 0;
+        cursor: pointer;
+
+        &:hover {
+            background-color: rgb(189, 39, 0);
+        }
+    }
 }
