--- a/resources/css/sass/components/_icons.scss
+++ b/resources/css/sass/components/_icons.scss
@@ -1,5 +1,5 @@
 .icons{
-    fill: var(--fillallicons);
+    fill: var(--primarycolor);
     cursor: pointer;
     border-radius: 10px;
     transition:0.4s;
@@ -9,7 +9,7 @@
     -3px -3px 6px 1px;
 
     &:hover{
-fill: var(--fillhovericons);
+fill: var(--secundarycolor);
 transform: translateY(-10px);
     }
 }
