--- a/resources/css/sass/login/_login.scss
+++ b/resources/css/sass/login/_login.scss
@@ -4,12 +4,14 @@
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    width: 100%;
+    height: 550px;
 }
 main{
     width: 100%;
     padding: 20px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 40px;
     position: relative;
     max-width: 800px;
 }
@@ -19,7 +21,7 @@ main{
     padding: 10px 20px;
     display: flex;
     justify-content: center;
-    backdrop-filter: blur(10px);
+   
 }
 
 .caja__trasera div{
@@ -45,7 +47,7 @@ main{
 
 .caja__trasera button{
     padding: 10px 40px;
-    border: 2px solid #fff;
+    border: 2px solid rgb(255, 255, 255);
     font-size: 14px;
     background: transparent;
     font-weight: 600;
@@ -87,7 +89,7 @@ main{
     font-size: 30px;
     text-align: center;
     margin-bottom: 20px;
-    background: linear-gradient(80deg, #1100ff, #00dfd8);
+    background: linear-gradient(80deg, var(--primarycolor), #00dfd8);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
@@ -107,7 +109,7 @@ main{
     margin-top: 40px;
     border: none;
     font-size: 14px;
-    background: #46A2FD;
+    background: var(--primarycolor);
     font-weight: 600;
     cursor: pointer;
     color: white;
