--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1091,6 +1091,81 @@ main {
   background-color: rgba(0, 102, 255, 0);
 }
 
+.backoffice {
+  width: 200px;
+  height: 655px;
+  box-shadow: 0 10px 16px var(--primarycolor);
+}
+.backoffice_menuheader {
+  width: 100%;
+  height: 10%;
+}
+.backoffice_menuheader_informacion {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.backoffice_menuheader_informacion_logo {
+  display: inline-block;
+  width: 45px;
+  height: 45px;
+  border-radius: 25px;
+  animation: alternate infinite mover 2s;
+  animation-timing-function: ease-out;
+}
+.backoffice_menuheader_informacion_titulo {
+  font-family: var(--Sansita);
+  font-size: 20px;
+}
+.backoffice_menuheader_informacion_titulo::first-letter {
+  font-weight: bold;
+  font-size: 30px;
+}
+.backoffice_opciones {
+  padding-top: 25px;
+  align-items: center;
+  width: 100%;
+  height: 75%;
+  flex-direction: column;
+}
+.backoffice_opciones_enlace {
+  text-decoration: none;
+}
+.backoffice_opciones_boton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 95%;
+  height: 10%;
+}
+.backoffice_opciones_boton:hover {
+  background-color: var(--secundarycolor);
+  color: white;
+  transform: scale(0.8);
+}
+.backoffice_footer {
+  width: 100%;
+  height: 15%;
+}
+.backoffice_footer_iconos {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  animation: alternate infinite mover 2s;
+  animation-timing-function: ease-out;
+  padding-top: 20px;
+}
+.backoffice_footer_boton {
+  width: 95%;
+  height: 30px;
+}
+.backoffice_footer_boton:hover {
+  background-color: var(--secundarycolor);
+  color: white;
+  transform: scale(0.8);
+}
+
 .Conocenos {
   /* background-image: linear-gradient(270deg, #290d64 0, #1b0859 50%, #0b044e 100%);    */
   background-color: var(--primarycolor);
